Fix: Add more gap from the edge of display

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
     /* flex-wrap: wrap; */
 }
 .container{
+    margin: 15px 15px;
     display: flex;
     justify-content: center;
     align-items: center;
